--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.540.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
