--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1", 
+    "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.2.4",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
