--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
-    "next": "15.2.4",
+    "next": "^16.0.7",
     "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
